--- a/fetch-data.css
+++ b/fetch-data.css
@@ -22,3 +22,10 @@ ul {
   list-style: none;
   padding: 0;
 }
+
+li {
+  background-color: #eee;
+  margin: 8px 0;
+  padding: 10px;
+  border-radius: 4px;
+}
